# ProjectMagNET

./: README.md
boneyard/AsyncUDPClient/: AsyncUDPClient.ino
boneyard/AsyncUDPMulticastServer/: AsyncUDPMulticastServer.ino
boneyard/AsyncUDPServer/: AsyncUDPServer.ino
datasync-proto/: Cargo.toml  README.md
datasync-proto/src/: main.rs
magnet_app/lib/: about.dart  app_state_model.dart  main.dart  navrouter.dart
reference-designs/M5Atom_DigDug_Camera_Button/: M5Atom_DigDug_Camera_Button.ino
reference-designs/M5Stamp-C3U/: README.md  platformio.ini
reference-designs/MagNET_IMUCAL_XIAONRF52/: MagNET_IMUCAL_XIAONRF52.ino
reference-designs/MagNET_M5DialFiddlerCrab/: README.md  magnet-common.ini  test-plan.md
reference-designs/MagNET_M5DialFiddlerCrab/ESPIDFORTH/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
reference-designs/MagNET_M5DialFiddlerCrab/ESPIDFORTH/components/forth/: CMakeLists.txt  ESP32forth_README.txt  forth_core.cpp  forth_core.h
reference-designs/MagNET_M5DialFiddlerCrab/ESPIDFORTH/components/forth/optional/: rmt.h
reference-designs/MagNET_M5DialFiddlerCrab/EspJanet/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
reference-designs/MagNET_M5DialFiddlerCrab/EspJanet/components/janet/: CMakeLists.txt  janet.h
reference-designs/MagNET_M5DialFiddlerCrab/FiddlerWAIch/: .gitignore  README.md  project.yml
reference-designs/MagNET_M5DialFiddlerCrab/M5Atom_Echo_Hex_Hive_ATH20/: CMakeLists.txt  PROPOSAL.md  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32
reference-designs/MagNET_M5DialFiddlerCrab/M5Atom_Echo_Hex_Hive_ATH20/src/: CMakeLists.txt  aht20.c  aht20.h  env_state.h  http_env.c  http_env.h  main.c
reference-designs/MagNET_M5DialFiddlerCrab/M5Atom_Echo_Hex_Hive_Test/: CMakeLists.txt  sdkconfig.defaults
reference-designs/MagNET_M5DialFiddlerCrab/M5Atom_Matrix_Hive_Test/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32
reference-designs/MagNET_M5DialFiddlerCrab/M5Capsule_Hive_Scribe/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.m5capsule
reference-designs/MagNET_M5DialFiddlerCrab/M5Capsule_Hive_Scribe_Redis/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
reference-designs/MagNET_M5DialFiddlerCrab/M5Capsule_Hive_Scribe_Redis/components/craw_imu/: CMakeLists.txt  craw_imu.c  craw_imu.h  craw_imu_http.c  idf_component.yml
reference-designs/MagNET_M5DialFiddlerCrab/M5Capsule_Hive_Scribe_Redis/src/: CMakeLists.txt  main.c
reference-designs/MagNET_M5DialFiddlerCrab/M5StackDial-Blinky_Claw_OpenWR/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.esp32s3
reference-designs/MagNET_M5DialFiddlerCrab/M5StackDial-m5gfx-demo-ESPIDFORTH/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.esp32s3
reference-designs/MagNET_M5DialFiddlerCrab/M5Stamp3CU_Blinky_Claw_OpenWR/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c3
reference-designs/MagNET_M5DialFiddlerCrab/M5Stamp3CU_Blinky_E4TH/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c3
reference-designs/MagNET_M5DialFiddlerCrab/M5Stamp_DigDug_BLE_Lighting/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
reference-designs/MagNET_M5DialFiddlerCrab/M5StickCPlus-Blinky_Crawdad_OpenWR/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.m5stick_c_plus
reference-designs/MagNET_M5DialFiddlerCrab/M5_Hive_Camera/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.atoms3r  sdkconfig.defaults.esp32cam  sdkconfig.defaults.m5camerax  sdkconfig.defaults.m5cams3  sdkconfig.esp32cam  sdkconfig.m5camerax  sdkconfig.m5cams3
reference-designs/MagNET_M5DialFiddlerCrab/MagNET_ReSpeaker_Boombox/src/: CMakeLists.txt  http_speaker.c  http_speaker.h  main.c
reference-designs/MagNET_M5DialFiddlerCrab/MagNET_Vitals_E4TH/src/: CMakeLists.txt  http_vitals.c  http_vitals.h  idf_component.yml  main.c
reference-designs/MagNET_M5DialFiddlerCrab/components/claw_mdns/: CMakeLists.txt  claw_mdns.c  claw_mdns.h
reference-designs/MagNET_M5DialFiddlerCrab/components/craw_mdns/: CMakeLists.txt  craw_mdns.c  craw_mdns.h
reference-designs/MagNET_PetWear_XIAOESP32C6/: MagNET_PetWear_XIAOESP32C6.ino
reference-designs/MagNET_Thread_COaP_hanasu_esp32c6/: MAGNet_Protocol_DESIGN_PROPOSAL.md  MagNET_Thread_COaP_hanasu_esp32c6.ino  README.md
reference-designs/MagNET_Thread_COaP_light_esp32c6/: MagNET_Thread_COaP_light_esp32c6.ino
reference-designs/MagNET_Thread_COaP_switch_esp32c6/: MagNET_Thread_COaP_switch_esp32c6.ino
reference-designs/MagNET_TimeServer_M5StampS3/: platformio.ini
reference-designs/MagNET_Wifi6_Sync_XIAOESP32C6/: MagNET_Wifi6_Sync_XIAOESP32C6.ino
reference-designs/MagNET_typeScreen_M5AtomS3LCD/: platformio.ini
reference-designs/PetWear_r1_zephos/: CMakeLists.txt  README.md  prj.conf
reference-designs/webxrofthings/: JOINCODE_SPEC.md  PROPOSAL.md  README.md  ROADMAP.md  USECASE_SPECS.md  VIDEO_STREAMING_ANALYSIS.md  XR_UX-proposal1.md  conference-poster.pptx
webxrofthings-proto/: PROPOSAL.md  README.md
(+467 files in other folders)
